# galaxy_classification_mcp

./: .env.example  .gitignore  README.md  galaxy_classification_instruction.md  pyproject.toml  requirements.txt  server.py
